sidebar icon & new page builder category item alignment fixes

--- a/src/components/PageBuilder/index.scss
+++ b/src/components/PageBuilder/index.scss
@@ -276,6 +276,11 @@ $fontName: "proximanova-bold-webfont";
   }
 }
 
+.gjs-blocks-c svg{
+  width: 100%;
+  height: 100% !important;
+}
+
  .gjs-sm-sector-title{
   position:  relative !important;
   padding: 9px 10px 9px 15px !important;
